miniextendr-macros/tests/ui/module_invalid_item.stderr
error: unrecognized item in miniextendr_module!; expected: mod name;, use submodule;, fn name;, struct Name;, impl Type;, vctrs Name;
 --> tests/ui/module_invalid_item.rs:7:5
  |
7 |     let x = 5;  // Invalid: only fn, struct, impl, use allowed
  |     ^^^
